--- a/src/app/admin/menu/menu.component.html
+++ b/src/app/admin/menu/menu.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="Nav-bar">
-    <span class="title">Dietary Fiber</span>
+    <span class="title">FOOD DIET</span>
     <ul>
 
         <li><a (click)="home()">Home</a></li>
