--- a/src/app/user/dietplan/diet/diet.component.css
+++ b/src/app/user/dietplan/diet/diet.component.css
@@ -10,10 +10,14 @@ a.service-link {
   flex-direction: column;
   align-items: center;
   padding: 20px;
-  border: 1px solid #ccc;
+  border: 1px solid #eaeaea;
   border-radius: 10px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease-in-out;
+  background-color: #6ebfe7;
+  width: 250px;
+  height: 300px;
+  margin: 20px;
 }
 
 .service-box:hover {
@@ -21,16 +25,19 @@ a.service-link {
 }
 
 .image-holder {
-  width: 200px;
-  height: 150px;
+  width: 120px;
+  height: 120px;
   overflow: hidden;
   border-radius: 50%;
   margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .image-holder img {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
   object-fit: cover;
   border-radius: 50%;
   transition: transform 0.3s ease-in-out;
@@ -44,4 +51,5 @@ a.service-link {
   font-size: 18px;
   font-weight: bold;
   margin-top: 10px;
+  text-align: center;
 }
