--- a/src/app/user/create/create.component.css
+++ b/src/app/user/create/create.component.css
@@ -1,35 +1,42 @@
 .container-wrapper {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 20px;
   }
   
   .example-container {
-    flex-basis: 45%;
+    flex: 1;
+    padding: 20px;
   }
   
   .example-list {
-    min-height: 150px;
+    min-height: 200px;
+    background-color: #f5f5f5;
     border: 1px solid #ccc;
+    border-radius: 5px;
     padding: 10px;
   }
   
   .example-box {
-    background-color: #f5f5f5;
+    display: flex;
+    align-items: center;
     padding: 10px;
-    margin-bottom: 5px;
-    cursor: move;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 10px;
   }
   
   .item-details {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    margin-left: 10px;
   }
   
   .result {
     margin-top: 20px;
-    border: 1px solid #ccc;
-    padding: 10px;
+  }
+  
+  button {
+    margin-top: 10px;
   }
   
